[package]
name = "aoc_lib"
version = "0.1.0"
authors = ["Stuart Haidon <serayen.sh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.10"
human_format = "1.0.3"
nom = "6.0.1"
tempfile = "3.1.0"
crossterm = "0.18"
tui = { version = "0.13.0", default-features = false, features = ["crossterm"] }
bytesize = "1.0.1"
once_cell = "1.5.2"
