[package]
name = "aoc_lib"
version = "0.2.0"
authors = ["Stuart Haidon <serayen.sh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
human_format = "1.0.3"
nom = "6.1.2"
tempfile = "3.2.0"
bytesize = "1.0.1"
once_cell = "1.7.2"
structopt = "0.3.21"
thiserror = "1.0.24"
indicatif = "0.16.2"
rayon = "1.5.1"
num_cpus = "1.13.0"
console = "0.14.1"
crossbeam-channel = "0.5.1"
